Add PyScript resources to index.html
Added PyScript CSS and JS links to the HTML file.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html>
   <head>
     <title>main</title>
+    <link rel="stylesheet" href="https://pyscript.net/releases/2025.11.1/core.css">
+    <script type="module" src="https://pyscript.net/releases/2025.11.1/core.js"></script>
   </head>
   <body>
     <h1>Concact</h1>
