Update PyScript version and modify h2 element
Updated PyScript version and added a script to modify h2 text after a delay.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <html>
   <head>
     <title>main</title>
-    <link rel="stylesheet" href="https://pyscript.net/releases/2025.11.1/core.css">
-    <script type="module" src="https://pyscript.net/releases/2025.11.1/core.js"></script>
+    <link rel="stylesheet" href="https://pyscript.net/releases/2025.11.2/core.css">
+    <script type="module" src="https://pyscript.net/releases/2025.11.2/core.js"></script>
+    <script type="py">
+      import pyscript,time
+      s='tempest799165837'
+      time.sleep(2)
+      pyscript.document.getElementByName('h2').innerText=s
+    </script>
   </head>
   <body>
     <h1>Concact</h1>
-    <h2>tempest799165837</h2>
+    <h2>****************</h2>
   </body>
 </html>
