Fix getElementByName to access first element

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       import pyscript,time
       s='tempest799165837'
       time.sleep(2)
-      pyscript.document.getElementByName('h2').innerText=s
+      pyscript.document.getElementByName('h2')[0].innerText=s
     </script>
   </head>
   <body>
