--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <link rel="stylesheet" href="https://pyscript.net/releases/2025.11.2/core.css">
     <script type="module" src="https://pyscript.net/releases/2025.11.2/core.js"></script>
     <script type="py">
-      import pyscript,time
-      s='tempest799165837'
-      time.sleep(2)
-      pyscript.document.getElementsByTagName('h2')[0].innerText=s
+       document.getElementsByTagName('h2')[0].innerText='tempest799165837'
     </script>
   </head>
   <body>
