--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>main</title>
     <link rel="stylesheet" href="https://pyscript.net/releases/2025.11.2/core.css">
     <script type="module" src="https://pyscript.net/releases/2025.11.2/core.js"></script>
-    <script type="py">
+    <script type="module">
        document.getElementsByTagName('h2')[0].innerText='tempest799165837'
     </script>
   </head>
