--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <script type="module">
        document.getElementsByTagName('h2')[0].innerText='tempest799165837'
     </script>
+    <style>
+      img{
+        width:200px;
+        height:300px:
+      }
+    </style>
   </head>
   <body>
     <h1>Concact</h1>
