--- a/index.html
+++ b/index.html
@@ -3,17 +3,8 @@
 <html>
   <head>
     <title>main</title>
-    <link rel="stylesheet" href="https://pyscript.net/releases/2025.11.2/core.css">
-    <script type="module" src="https://pyscript.net/releases/2025.11.2/core.js"></script>
-    <script type="module">
-       document.getElementsByTagName('h2')[0].innerText='tempest799165837'
-    </script>
-    <style>
-      img{
-        width:200px;
-        height:300px:
-      }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
   </head>
   <body>
     <h1>Concact</h1>
